<resources>
    <string name="app_name">Techno Jam</string>
    <string name="tj_logo">TJ Logo</string>
    <string name="throttle">Throttle</string>
    <string name="to">To</string>
    <string name="learn">Learn</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="signup">SignUp</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_msg">Please enter your registerd e-mail to reset password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_profile">Profile</string>
    <string name="events">Events</string>
    <string name="hii">Hii,</string>
    <string name="search">Search...</string>
    <string name="achievements">Achievements</string>
    <string name="our_achievements">Our Achievements</string>
    <string name="permissions">Permissions</string>
    <string name="event_proposal">Event Proposal</string>
    <string name="our_team">Our Team</string>
    <string name="about_us">About Us</string>
    <string name="member">Member</string>
    <string name="team_members">Team Members</string>
    <string name="event_name">Event Name</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="request_event_proposal">Request Event Proposal</string>
    <string name="your_name">Your Name</string>
    <string name="explain_your_event_plan_in_brief">Explain your Event plan in brief</string>
    <string name="event_description">Event Description</string>
    <string name="submit">Submit</string>
    <string name="member_name">Member Name</string>
    <string name="member_position">Member Position</string>
    <string name="find_us_on">Find us on:</string>
    <string name="event_title">Event Title</string>
    <string name="sun_aug_12_2023">Sun Aug 12 2023</string>
    <string name="resources">Resources</string>
    <string name="feedback">Feedback</string>
    <string name="your_task">Your Task</string>
    <string name="task_title">Task Title</string>
    <string name="assign_by">Assign By:</string>
    <string name="team_lead">Team Lead</string>
    <string name="mark_done">Mark Done</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="trending">Trending Topics</string>
    <string name="title">Title</string>
    <string name="learn_more">Learn More</string>
    <string name="about_technojam">About TechnoJam</string>
    <string name="search_member">Search Member...</string>
</resources>