<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".PermissionsActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:fontFamily="@font/poppins_black"
        android:padding="@dimen/_5dp"
        android:text="@string/event_proposal"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/request_event_proposal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/search_bar_background"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:hint="@string/your_name"
        android:inputType="text"
        android:paddingStart="@dimen/_20dp"
        android:paddingTop="@dimen/_10dp"
        android:paddingEnd="@dimen/_20dp"
        android:paddingBottom="@dimen/_10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/search_bar_background"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_20dp"
        android:paddingTop="@dimen/_10dp"
        android:paddingEnd="@dimen/_20dp"
        android:paddingBottom="@dimen/_10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <TextView
        android:id="@+id/plantTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/explain_your_event_plan_in_brief"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />


    <EditText
        android:id="@+id/et_planDescription"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:imeOptions="actionDone"
        android:background="@drawable/white_round_corner_background"
        android:fontFamily="@font/poppins_regular"
        android:gravity="top"
        android:hint="@string/event_description"
        android:inputType="textMultiLine"
        android:paddingStart="@dimen/_20dp"
        android:paddingTop="@dimen/_10dp"
        android:paddingEnd="@dimen/_20dp"
        android:paddingBottom="@dimen/_10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/plantTitle" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@drawable/blue_button_background"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_planDescription" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/doneAnimation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/success" />

</androidx.constraintlayout.widget.ConstraintLayout>