<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:fontFamily="@font/poppins_black_bold"
        android:text="@string/hii"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2dp"
        android:fontFamily="@font/poppins_black_bold"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hi"
        app:layout_constraintStart_toEndOf="@+id/tv_hi"
        app:layout_constraintTop_toTopOf="@+id/tv_hi" />

    <EditText
        android:id="@+id/sv_search"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/search_bar_background"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/_5dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:hint="@string/search"
        android:padding="@dimen/_10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userName" />

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/trending"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_search" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1dp"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_heading" />

    <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
        android:id="@+id/rv_tendingList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
        tools:listitem="@layout/trending_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>