<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_20dp"
    app:cardElevation="@dimen/_5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_topicPoster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/space_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundCornerImage" />

        <TextView
            android:id="@+id/tv_topicTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:fontFamily="@font/poppins_black_bold"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_topicPoster" />

        <View
            android:id="@+id/viewDivider"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1dp"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_15dp"
            android:background="@color/light_magenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_topicTitle" />

        <TextView
            android:id="@+id/tv_shortDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:maxLines="5"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="@id/viewDivider"
            app:layout_constraintStart_toStartOf="@id/viewDivider"
            app:layout_constraintTop_toBottomOf="@id/viewDivider" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_learnMore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_15dp"
            android:background="@drawable/tj_gradient_btn_background"
            android:elevation="@dimen/_10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/learn_more"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_shortDescription"
            app:layout_constraintStart_toStartOf="@id/tv_shortDescription"
            app:layout_constraintTop_toBottomOf="@id/tv_shortDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>